2019-09-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m: Re-order code to avoid setting session priority
	twice.
	* Source/NSFileHandle.m: Fux so that setting certificate information
	does not discard any other options already set.

2019-09-16  Alan Jenkins <alan.christopher.jenkins@gmail.com>

	* Tools/gdomap.c:
	A couple of is_local_net() tests were wrong: they used "&&"
	with masks, but that is the logical shortcut operator.
	The correct bitwise operator is "&".  The result was that
	is_local_net() was always returning true!
	Only allow local processes to send GDO_SERVERS requests.
 	This request is only useful locally.  Do not allow remote
	requests for the server list.  Our response can be large,
	so it would make a great UDP amplification attack.

2019-08-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSSocketStream.m: Fix for hang when writing large https
	requests.
	* Source/GSStream.h: improve diagnostics
	* Source/GSStream.m: improve diagnostics
	* Source/NSURLProtocol.m: improve diagnostics
	* Tests/base/NSURLConnection/Helpers/NSURLConnectionTest.m:
	* Tests/base/NSURLConnection/test05.m:
	Bugfix and new testcase for https request with large (over 64KB) body.

2019-08-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m:
	* Source/NSThread.m:
	Improve reporting of excess performers so that, when one thread
	performs selectors in another, you can see the class of the receiver
	and the selector involved.

2019-08-08  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: check for malloc_usable_sizer()
	* configure: regenerate
	* Headers/GNUstepBase/config.h.in: regenerate
	* Headers/Foundation/NSDebug.h: Add GSMemoryBytes()
	* Headers/GNUstepBase/NSObject+GNUstepBase.h: Rework memory usage
	reporting extensions API.
	* Source/Additions/NSMutableString+GNUstepBase.m:
	* Source/Additions/NSObject+GNUstepBase.m:
	* Source/GSArray.m:
	* Source/GSCountedSet.m:
	* Source/GSDictionary.m:
	* Source/GSSet.m:
	* Source/GSString.m: